# fancy-weather-app

./: .envrc.skel  .gitignore  .tool-versions  docker-compose.yml
src/backend/: pyproject.toml
src/backend/apps/public_rest_api/: router.py
src/backend/apps/public_rest_api/handlers/: __init__.py
src/backend/apps/public_rest_api/handlers/queries/: get_forecast_5d_3h.py
src/backend/core/application/: get_location_by_zip_code.py
src/backend/core/domain/: geo_client.py  weather_client.py
src/backend/core/domain/queries/: get_current_weather_query.py  get_location.py
src/backend/docker/: dev.Dockerfile
src/backend/infrastructure/open_weather/geo_client/: container.py  stub_open_weather_geo_client.py
src/backend/infrastructure/open_weather/weather_client/: open_weather_weather_client.py  stub_open_weather_weather_client.py
src/backend/shared/fast_api_ext/: app.py  container.py
src/backend/shared/query_bus/: query.py  query_bus.py
src/backend/src/: public_rest_api.py
src/backend/src/apps/public_rest_api/: container.py
src/backend/src/apps/public_rest_api/handlers/: __init__.py
src/backend/src/core/: container.py
src/backend/src/core/application/: get_country_by_coordinates.py  get_current_weather_handler.py  get_forecast_5d_3h.py
src/backend/src/core/domain/: geo.py  geo_client.py
src/backend/src/core/domain/queries/: get_country_by_coordinates.py  get_forecast_5d_3h.py
src/backend/src/infrastructure/open_weather/geo_client/: open_weather_geo_client.py
src/backend/src/shared/query_bus/: __init__.py  query_handler.py
src/spa/: .babelrc  (+3 more)
(+25 files in other folders)
