[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniel Albarral Nunez <daniel@albarralnunez.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
aiohttp = "^3.8.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
dependency-injector = "^4.39.1"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
